<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:layout_width="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_width="match_parent">

                <com.denzcoskun.imageslider.ImageSlider
                    android:layout_width="match_parent"
                    android:id="@+id/Home_imgeslider"
                    app:auto_cycle="true"
                    app:placeholder="@drawable/abc_vector_test"
                    app:error_image="@drawable/error"
                    app:delay="0"
                    app:period="2000"
                    app:corner_radius="8"
                    android:layout_height="150dp">

                </com.denzcoskun.imageslider.ImageSlider>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginRight="10dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="2dp"
                android:background="@drawable/cardview_syle_ligth_blue"
                >


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cardview_style">

                    <ImageButton
                        android:id="@+id/Home_upload_Prescription_imgBtn"
                        android:layout_width="59dp"
                        android:layout_height="38dp"
                        android:background="@drawable/touch_selector"
                        android:src="@mipmap/ic_uploads_foreground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.048"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.275" />

                    <TextView
                        android:id="@+id/Home_upload_Prescription_textView"
                        android:layout_width="69dp"
                        android:layout_height="31dp"
                        android:layout_marginTop="4dp"
                        android:text="Prescription Upload"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/Home_upload_Prescription_imgBtn"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/Home_upload_Prescription_imgBtn"
                        app:layout_constraintTop_toBottomOf="@+id/Home_upload_Prescription_imgBtn"
                        app:layout_constraintVertical_bias="0.571" />

                    <ImageButton
                        android:id="@+id/Home_refill_imgBtn"
                        android:layout_width="59dp"
                        android:layout_height="38dp"
                        android:background="@drawable/touch_selector"
                        android:src="@mipmap/ic_refill_foreground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.683"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.275" />

                    <TextView
                        android:id="@+id/Home_refill_textView"
                        android:layout_width="61dp"
                        android:layout_height="30dp"
                        android:text="@string/refill_Medicine"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/Home_refill_imgBtn"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/Home_refill_imgBtn"
                        app:layout_constraintTop_toBottomOf="@+id/Home_refill_imgBtn"
                        app:layout_constraintVertical_bias="0.666" />

                    <ImageButton
                        android:id="@+id/Home_qrPrescription_imgBtn"
                        android:layout_width="59dp"
                        android:layout_height="38dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/touch_selector"
                        android:src="@mipmap/ic_qr_scan_foreground"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.364"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/Home_qrPrescription_textView"
                        android:layout_width="68dp"
                        android:layout_height="32dp"
                        android:text="@string/qr_Prescription_scan"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/Home_qrPrescription_imgBtn"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/Home_qrPrescription_imgBtn"
                        app:layout_constraintTop_toBottomOf="@+id/Home_qrPrescription_imgBtn"
                        app:layout_constraintVertical_bias="0.9" />

                    <ImageButton
                        android:id="@+id/Home_manageReminder_imgBtn"
                        android:layout_width="59dp"
                        android:layout_height="38dp"
                        android:background="@drawable/touch_selector"
                        android:src="@mipmap/ic_manage_reminder_foreground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.951"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.275" />

                    <TextView
                        android:id="@+id/Home_manageReminder_textView"
                        android:layout_width="67dp"
                        android:layout_height="29dp"
                        android:text="@string/manage_reminder"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/Home_manageReminder_imgBtn"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/Home_manageReminder_imgBtn"
                        app:layout_constraintTop_toBottomOf="@+id/Home_manageReminder_imgBtn"
                        app:layout_constraintVertical_bias="0.692" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:id="@+id/Offers_linear_layout"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@drawable/offers">

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp"
                android:background="@drawable/cardview_syle_ligth_blue">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/cardview_style">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Home_EXPLORE_textView"
                    android:layout_margin="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explore"
                    android:textColor="@color/explore"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/Home_Products_see_all_txtView"
                    android:layout_margin="3dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textAlignment="center"
                    android:textColor="@color/ligth_blue"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/Home_Popular_Products_textView"
                    android:layout_margin="3dp"
                   android:layout_below="@+id/Home_EXPLORE_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_by_category"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/Home_diabetic_care_imgBtn"
                        android:layout_width="144dp"
                        android:layout_height="139dp"
                        android:layout_margin="2dp"
                        android:background="@drawable/touch_selector"
                        android:src="@mipmap/ic_diabetic_care_foreground" />
                    <ImageButton
                        android:id="@+id/Home_householad_imgBtn"
                        android:background="@drawable/touch_selector"
                        android:layout_margin="2dp"
                        android:layout_width="144dp"
                        android:layout_height="139dp"
                        android:src="@mipmap/ic_householad_foreground" />
                    <ImageButton
                        android:id="@+id/Home_intimacy_imgBtn"
                        android:background="@drawable/touch_selector"
                        android:layout_margin="2dp"
                        android:layout_width="144dp"
                        android:layout_height="139dp"
                        android:src="@mipmap/ic_intimacy_foreground" />
                    <ImageButton
                        android:id="@+id/Home_medicalDevies_imgBtn"
                        android:background="@drawable/touch_selector"
                        android:layout_margin="2dp"
                        android:layout_width="144dp"
                        android:layout_height="139dp"
                        android:src="@mipmap/ic_medical_devies_foreground" />
                    <ImageButton
                        android:id="@+id/Home_monthercare_imgBtn"
                        android:background="@drawable/touch_selector"
                        android:layout_margin="2dp"
                        android:layout_width="144dp"
                        android:layout_height="139dp"
                        android:src="@mipmap/ic_monthercare_foreground" />
                    <ImageButton
                        android:id="@+id/Home_prescription_imgBtn"
                        android:background="@drawable/touch_selector"
                        android:layout_margin="2dp"
                        android:layout_width="144dp"
                        android:layout_height="139dp"
                        android:src="@mipmap/ic_prescription_foreground" />
                </LinearLayout>
            </HorizontalScrollView>
            </LinearLayout>
          </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>